--- a/app/styles/Accordion.module.css
+++ b/app/styles/Accordion.module.css
@@ -5,14 +5,13 @@
 }
 
 .wrapper {
-  border-bottom: 1px solid #eee;
   overflow: hidden;
 }
 
 .wrapper .question_container {
   width: 100%;
   text-align: left;
-  padding: 10px 10px;
+  padding: 5px 5px;
   display: flex;
   align-items: center;
   justify-content: space-between;
@@ -20,6 +19,8 @@
   background: transparent;
   border: none;
   cursor: pointer;
+  background-color: #eee;
+  border-radius: 0px 20px 0 0;
 }
 
 .question_container.active {
@@ -51,8 +52,7 @@
 }
 
 .wrapper .answer_container {
-  padding: 0 1rem;
-  margin-bottom: 10px;
+  padding: 10px 10px 0px 10px;
   transition: height 0.7s ease-in-out;
   background-color: rgba(100, 100, 100, 0.04);
 }
