update: user zone updaed

--- a/app/styles/custom.css
+++ b/app/styles/custom.css
@@ -37,9 +37,9 @@
 }
 
 .userZoneImage {
-  width: 40px;
+ /*  width: 40px;
   height: 30px;
-  cursor: "pointer";
+  cursor: "pointer"; */
 }
 
 /*For test only, to remove*/
